Fix input box in dark mode

--- a/static/style.css
+++ b/static/style.css
@@ -89,6 +89,16 @@ body.dark-mode button:hover {
     background-color: #1861ac;
 }
 
+body.dark-mode textarea {
+    background-color: #333;
+    color: #ccc;
+    border: 1px solid #555;
+}
+
+body.dark-mode textarea::placeholder {
+    color: #bbb;
+}
+
 .theme-switch {
     position: fixed;
     top: 20px;
